# django-auth-and-user-management

./: .env.example  .gitignore  Note.txt  pyproject.toml
config/: settings.py  urls.py
myApp/: forms.py  urls.py  views.py
myApp/templates/myApp/: base.html  home.html
myApp/templates/registration/: login.html  sign_up.html
